# Harmonica

./: README.md
src/: CMakeLists.txt  getSoundData.cpp  getSoundData.h  getSoundData.h~  main.cpp  pitchDetector.cpp  pitchDetector.h
src/DspFilters/: Common.h
src/GL/: glext.h
src/kissFFT/: kiss_fft.c
src/winLib/lib/: portaudio_x64.lib
